# Lumen

./: .gitignore  HANDOFF.md  Makefile  PARALLEL.md  PLAN.md  SESSION-2026-03-24.md  VOICE-TODO.md  requirements.txt
agents/code/: __init__.py  reviewer.py  scaffold.py
agents/finance/: __init__.py  analytics.py  collector.py  macro.py  scanner.py  storyboard.py  watchlist.py
agents/news/: __init__.py  aggregator.py  briefing.py  summarizer.py
agents/sports/: __init__.py  recap.py  schedule.py  scores.py
config/: lumen.yaml.example  personality.md
crates/lumen-core/: Cargo.toml
crates/lumen-core/src/: classifier.rs  guardrails.rs  lib.rs  predictor.rs  sentiment.rs  tts_prep.rs
data/migrations/: 001_initial.sql  002_emotions.sql  003_finance_scanner.sql
docs/: PLAN-ASSISTANT-UX.md  PLAN-BEHAVIORAL-ENGINE.md  PLAN-MODEL-OPTIMIZATION.md
profile/: condenser.py  engine.py  predictor.py  sentiment.py
scripts/: install.sh
server/: app.py  cache.py  claude_client.py  config.py  context.py  database.py  emotions.py  memory.py  mlx_client.py  observe.py  ollama_client.py  proactive.py  router.py  search.py  tts_server.py
ui/: lumen.html  observe.html
ui/static/: lumen.css  lumen.js
