[package]
name = "lumen-core"
version = "0.1.0"
edition = "2021"
description = "High-performance core engine for Lumen AI assistant"

[lib]
name = "lumen_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
